# LLM_from_scratch

./: .gitignore  pyproject.toml  requirements.txt
ch01/: ch01.ipynb
ch02/: ch02.ipynb
ch03/: ch03-gpt-llama.ipynb  ch03-qwen.ipynb  ch03.ipynb  gemma3.ipynb
ch04/: ch04.ipynb  previous_chapters.py  time_machine.txt
ch05/: ch05.ipynb
