[project]
name = "llm-from-scratch"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "jupyterlab>=4.4.9",
    "matplotlib>=3.10.7",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "psutil>=7.1.0",
    "tensorflow>=2.20.0",
    "tiktoken>=0.12.0",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
]
